@@ -18,6 +18,7 @@ import java.util.BitSet;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Set;
+import java.util.stream.IntStream;
 
 import ucar.ma2.StructureData;
 
@@ -41,7 +42,7 @@ public class IntArray extends PrimitiveArray {
     /** This indicates if this class' type (e.g., PAType.SHORT) is an integer (in the math sense) type. 
      * The integer type classes overwrite this.
      */
-    public boolean isIntegerType() {
+    public final boolean isIntegerType() {
         return true;
     }
 
@@ -52,7 +53,7 @@ public class IntArray extends PrimitiveArray {
      * @return the number of bytes per element for this PrimitiveArray.
      * The value for "String" isn't a constant, so this returns 20.
      */
-    public int elementSize() {
+    public final int elementSize() {
         return 4;
     }
 
@@ -60,7 +61,7 @@ public class IntArray extends PrimitiveArray {
      * This returns for cohort missing value for this class (e.g., Integer.MAX_VALUE), 
      * expressed as a double. FloatArray and StringArray return Double.NaN. 
      */
-    public double missingValueAsDouble() {
+    public final double missingValueAsDouble() {
         return Integer.MAX_VALUE;
     }
 
@@ -73,7 +74,7 @@ public class IntArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMaxValue(int index) {
+    public final boolean isMaxValue(final int index) {
         return get(index) == Integer.MAX_VALUE;
     }
 
@@ -84,7 +85,7 @@ public class IntArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMissingValue(int index) {
+    public final boolean isMissingValue(final int index) {
         return maxIsMV && isMaxValue(index);
     }
 
@@ -101,7 +102,7 @@ public class IntArray extends PrimitiveArray {
      *
      * @param primitiveArray a primitiveArray of any type 
      */
-    public IntArray(PrimitiveArray primitiveArray) {
+    public IntArray(final PrimitiveArray primitiveArray) {
         array = new int[primitiveArray.size()]; //exact size
         append(primitiveArray);
     }
@@ -113,7 +114,7 @@ public class IntArray extends PrimitiveArray {
      * @param active if true, size will be set to capacity and all elements 
      *    will equal 0; else size = 0.
      */
-    public IntArray(int capacity, boolean active) {
+    public IntArray(final int capacity, final boolean active) {
         Math2.ensureMemoryAvailable(4L * capacity, "IntArray");
         array = new int[capacity];
         if (active) 
@@ -126,7 +127,7 @@ public class IntArray extends PrimitiveArray {
      * @param first the value of the first element.
      * @param last the value of the last element (inclusive!).
      */
-    public IntArray(int first, int last) {
+    public IntArray(final int first, final int last) {
         size = last - first + 1;
         array = new int[size];
         for (int i = 0; i < size; i++) 
@@ -139,7 +140,7 @@ public class IntArray extends PrimitiveArray {
      *
      * @param anArray the array to be used as this object's array.
      */
-    public IntArray(int[] anArray) {
+    public IntArray(final int[] anArray) {
         array = anArray;
         size = anArray.length;
     }
@@ -154,7 +155,7 @@ public class IntArray extends PrimitiveArray {
      * @param csv the comma-separated-value string
      * @return a IntArray from the comma-separated values.
      */
-    public static IntArray fromCSV(String csv) {
+    public final static IntArray fromCSV(final String csv) {
         return (IntArray)PrimitiveArray.csvFactory(PAType.INT, csv);
     }
 
@@ -163,21 +164,21 @@ public class IntArray extends PrimitiveArray {
      *
      * @return a new PAOne with the minimum value that can be held by this class, e.g., -128b for ByteArray. 
      */
-    public PAOne MINEST_VALUE() {return PAOne.fromInt(Integer.MIN_VALUE);}
+    public final PAOne MINEST_VALUE() {return PAOne.fromInt(Integer.MIN_VALUE);}
 
     /** This returns a new PAOne with the maximum value that can be held by this class 
      *   (not including the cohort missing value). 
      *
      * @return a new PAOne with the maximum value that can be held by this class, e.g., 126 for ByteArray. 
      */
-    public PAOne MAXEST_VALUE() {return PAOne.fromInt(Integer.MAX_VALUE - 1);}
+    public final PAOne MAXEST_VALUE() {return PAOne.fromInt(Integer.MAX_VALUE - 1);}
 
     /**
      * This returns the current capacity (number of elements) of the internal data array.
      * 
      * @return the current capacity (number of elements) of the internal data array.
      */
-    public int capacity() {
+    public final int capacity() {
         return array.length;
     }
 
@@ -196,6 +197,7 @@ public class IntArray extends PrimitiveArray {
         for (int i = 0; i < size; i++)
             code = 31*code + array[i];
         return code;
+        //return HashDigest.murmur32(array, size);
     }
 
     /**
@@ -210,7 +212,7 @@ public class IntArray extends PrimitiveArray {
      *    If new, it will have a backing array with a capacity equal to its size.
      *    If stopIndex &lt; startIndex, this returns PrimitiveArray with size=0;
      */
-    public PrimitiveArray subset(PrimitiveArray pa, int startIndex, int stride, int stopIndex) {
+    public PrimitiveArray subset(final PrimitiveArray pa, final int startIndex, final int stride, int stopIndex) {
         if (pa != null)
             pa.clear();
         if (startIndex < 0)
@@ -224,7 +226,7 @@ public class IntArray extends PrimitiveArray {
         if (stopIndex < startIndex)
             return pa == null? new IntArray(new int[0]) : pa;  //no need to call .setMaxIsMV(maxIsMV) since size=0
 
-        int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
+        final int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
         IntArray ia = null;
         if (pa == null) {
             ia = new IntArray(willFind, true);
@@ -233,7 +235,7 @@ public class IntArray extends PrimitiveArray {
             ia.ensureCapacity(willFind);
             ia.size = willFind;
         }
-        int tar[] = ia.array;
+        final int tar[] = ia.array;
         if (stride == 1) {
             System.arraycopy(array, startIndex, tar, 0, willFind);
         } else {
@@ -260,22 +262,20 @@ public class IntArray extends PrimitiveArray {
      * @return the minimum PAType needed to completely and precisely contain
      * the values in this PA's PAType and tPAType (e.g., when merging two PrimitiveArrays).
      */
-    public PAType needPAType(PAType tPAType) {
-        //if tPAType is smaller or same, return this.PAType
-        if (tPAType == PAType.BYTE ||
-            tPAType == PAType.UBYTE ||
-            tPAType == PAType.SHORT ||
-            tPAType == PAType.USHORT ||
-            tPAType == PAType.INT)    return PAType.INT;
+    public PAType needPAType(final PAType tPAType) {
+        return switch (tPAType) {
+            //if tPAType is smaller or same, return this.PAType
+            case BYTE, UBYTE, SHORT, USHORT, INT -> PAType.INT;
 
-        //if sideways
-        if (tPAType == PAType.CHAR)   return PAType.STRING;
-        if (tPAType == PAType.UINT)   return PAType.LONG;
-        if (tPAType == PAType.ULONG)  return PAType.STRING;
-        if (tPAType == PAType.FLOAT)  return PAType.DOUBLE;
+            //if sideways
+            case CHAR  -> PAType.STRING;
+            case UINT  -> PAType.LONG;
+            case ULONG -> PAType.STRING;
+            case FLOAT -> PAType.DOUBLE;
 
-        //if tPAType is bigger.  LONG, DOUBLE, STRING
-        return tPAType;
+            //if tPAType is bigger.  LONG, DOUBLE, STRING
+            default    -> tPAType;
+        };
     }
 
     /**
@@ -283,7 +283,7 @@ public class IntArray extends PrimitiveArray {
      *
      * @param value the value to be added to the array
      */
-    public void add(int value) {
+    public final void add(final int value) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         array[size++] = value;
@@ -298,10 +298,10 @@ public class IntArray extends PrimitiveArray {
      *    then convert DoubleArray to IntArray.)
      *    If null or not a Number, this adds Integer.MAX_VALUE.
      */
-    public void addObject(Object value) {
+    public final void addObject(final Object value) {
         //double is good intermediate because it has the idea of NaN
-        addDouble(value != null && value instanceof Number?
-            ((Number)value).doubleValue() : Double.NaN); 
+        addDouble(value != null && value instanceof Number nu?
+            nu.doubleValue() : Double.NaN); 
     }
 
     /**
@@ -310,7 +310,7 @@ public class IntArray extends PrimitiveArray {
      * @param sd from an .nc file
      * @param memberName
      */
-    public void add(StructureData sd, String memberName) {
+    public void add(final StructureData sd, final String memberName) {
         add(sd.getScalarInt(memberName));
     }
 
@@ -319,8 +319,8 @@ public class IntArray extends PrimitiveArray {
      *
      * @param ar an array
      */
-    public void add(int ar[]) {
-        int arSize = ar.length; 
+    public final void add(final int ar[]) {
+        final int arSize = ar.length; 
         ensureCapacity(size + (long)arSize);
         System.arraycopy(ar, 0, array, size, arSize);
         size += arSize;
@@ -333,7 +333,7 @@ public class IntArray extends PrimitiveArray {
      * @param value the value to be added to the array.
      *    n &lt; 0 throws an Exception.
      */
-    public void addN(int n, int value) {
+    public final void addN(final int n, final int value) {
         if (n == 0) return;
         if (n < 0)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -350,7 +350,7 @@ public class IntArray extends PrimitiveArray {
      * @param index the position where the value should be inserted.
      * @param value the value to be inserted into the array
      */
-    public void atInsert(int index, int value) {
+    public void atInsert(final int index, final int value) {
 //String2.log(">>IntArray index=" + index + " value=" + value + " size=" + size + " al=" + array.length);
         if (index < 0 || index > size)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -369,8 +369,8 @@ public class IntArray extends PrimitiveArray {
      * @param index 0..
      * @param value the value, as a String.
      */
-    public void atInsertString(int index, String value) {
-        Integer io = String2.parseIntObject(value); //handles NaN and mv
+    public void atInsertString(final int index, final String value) {
+        final Integer io = String2.parseIntObject(value); //handles NaN and mv
         if (io == null) {
             maxIsMV = true;
             atInsert(index, Integer.MAX_VALUE);
@@ -386,7 +386,7 @@ public class IntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a PAOne (or null).
      */
-    public void addNPAOnes(int n, PAOne value) {
+    public final void addNPAOnes(final int n, final PAOne value) {
         addNLongs(n, value == null? Long.MAX_VALUE : value.getLong());  //handles NaN and MV
     }
 
@@ -397,8 +397,8 @@ public class IntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a String.
      */
-    public void addNStrings(int n, String value) {
-        Integer io = String2.parseIntObject(value); //handles NaN and mv
+    public final void addNStrings(final int n, final String value) {
+        final Integer io = String2.parseIntObject(value); //handles NaN and mv
         if (io == null) {
             maxIsMV = true;
             addNInts(n, Integer.MAX_VALUE);
@@ -414,7 +414,7 @@ public class IntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a float.
      */
-    public void addNFloats(int n, float value) {
+    public final void addNFloats(final int n, final float value) {
         if (!maxIsMV && (!Float.isFinite(value) || value < Integer.MIN_VALUE || value > Integer.MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToInt(value));
@@ -427,7 +427,7 @@ public class IntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a double.
      */
-    public void addNDoubles(int n, double value) {
+    public final void addNDoubles(final int n, final double value) {
         if (!maxIsMV && (!Double.isFinite(value) || value < Integer.MIN_VALUE || value > Integer.MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToInt(value));
@@ -439,7 +439,7 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNInts(int n, int value) {
+    public final void addNInts(final int n, final int value) {
         addN(n, value);  //!!! assumes maxIsMV isn't affected
     }
 
@@ -449,7 +449,7 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNLongs(int n, long value) {
+    public final void addNLongs(final int n, final long value) {
         if (value < Integer.MIN_VALUE || value > Integer.MAX_VALUE) {
             maxIsMV = true;
             addN(n, Integer.MAX_VALUE);
@@ -466,7 +466,7 @@ public class IntArray extends PrimitiveArray {
      * @param nValues the number of values to be added
      * @return 'this' for convenience
      */
-    public PrimitiveArray addFromPA(PrimitiveArray otherPA, int otherIndex, int nValues) {
+    public PrimitiveArray addFromPA(final PrimitiveArray otherPA, int otherIndex, final int nValues) {
 
         //add from same type
         if (otherPA.elementType() == elementType()) {
@@ -496,7 +496,7 @@ public class IntArray extends PrimitiveArray {
      * @param otherPA the other PrimitiveArray
      * @param otherIndex the index of the item in otherPA
      */
-    public void setFromPA(int index, PrimitiveArray otherPA, int otherIndex) {
+    public void setFromPA(final int index, final PrimitiveArray otherPA, final int otherIndex) {
         setLong(index, otherPA.getLong(otherIndex)); //handles maxIsMV
     }
 
@@ -505,7 +505,7 @@ public class IntArray extends PrimitiveArray {
      *
      * @param index the element to be removed, 0 ... size-1
      */
-    public void remove(int index) {
+    public void remove(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayRemove, getClass().getSimpleName(), "" + index, "" + size));
@@ -521,7 +521,7 @@ public class IntArray extends PrimitiveArray {
      * @param from the first element to be removed, 0 ... size
      * @param to one after the last element to be removed, from ... size
      */
-    public void removeRange(int from, int to) {
+    public void removeRange(final int from, final int to) {
         if (to > size)
             throw new IllegalArgumentException(String2.ERROR + " in IntArray.removeRange: to (" + 
                 to + ") > size (" + size + ").");
@@ -545,8 +545,8 @@ public class IntArray extends PrimitiveArray {
      * @param last  (exclusive)
      * @param destination the destination, can't be in the range 'first+1..last-1'.
      */
-    public void move(int first, int last, int destination) {
-        String errorIn = String2.ERROR + " in IntArray.move:\n";
+    public void move(final int first, final int last, final int destination) {
+        final String errorIn = String2.ERROR + " in IntArray.move:\n";
 
         if (first < 0) 
             throw new RuntimeException(errorIn + "first (" + first + ") must be >= 0.");
@@ -568,8 +568,8 @@ public class IntArray extends PrimitiveArray {
         //String2.log("move initial " + String2.toCSSVString(array));
 
         //store the range to be moved
-        int nToMove = last - first;
-        int[] temp = new int[nToMove];
+        final int nToMove = last - first;
+        final int[] temp = new int[nToMove];
         System.arraycopy(array, first, temp, 0, nToMove);
 
         //if moving to left...    (draw diagram to visualize this)
@@ -599,7 +599,7 @@ public class IntArray extends PrimitiveArray {
      *
      * @param bitset The BitSet indicating which rows (indices) should be kept.
      */
-    public void justKeep(BitSet bitset) {
+    public void justKeep(final BitSet bitset) {
         int newSize = 0;
         for (int row = 0; row < size; row++) {
             if (bitset.get(row)) 
@@ -614,7 +614,7 @@ public class IntArray extends PrimitiveArray {
      * @param minCapacity the minimum acceptable capacity.
      *    minCapacity is type long, but &gt;= Integer.MAX_VALUE will throw exception.
      */
-    public void ensureCapacity(long minCapacity) {
+    public void ensureCapacity(final long minCapacity) {
         if (array.length < minCapacity) {
             //ensure minCapacity is < Integer.MAX_VALUE
             Math2.ensureArraySizeOkay(minCapacity, "IntArray");  
@@ -623,7 +623,7 @@ public class IntArray extends PrimitiveArray {
             if (newCapacity < minCapacity) 
                 newCapacity = (int)minCapacity; //safe since checked above
             Math2.ensureMemoryAvailable(4L * newCapacity, "IntArray");
-            int[] newArray = new int[newCapacity];
+            final int[] newArray = new int[newCapacity];
             System.arraycopy(array, 0, newArray, 0, size);
             array = newArray; //do last to minimize concurrency problems
         }
@@ -666,9 +666,9 @@ public class IntArray extends PrimitiveArray {
      * @return an array (perhaps 'array') which has 'size' elements.
      */
     public BitSet toBitSet() {
-        double stats[] = calculateStats();
-        int max = Math2.roundToInt(stats[PrimitiveArray.STATS_MAX]);
-        BitSet bitSet = new BitSet(max + 1);  //+1 so 0..max
+        final double stats[] = calculateStats();
+        final int max = Math2.roundToInt(stats[PrimitiveArray.STATS_MAX]);
+        final BitSet bitSet = new BitSet(max + 1);  //+1 so 0..max
         for (int i = 0; i < size; i++) {
             int ti = array[i];
             if (ti >= 0)
@@ -685,9 +685,9 @@ public class IntArray extends PrimitiveArray {
      */
     public double[] toDoubleArray() {
         Math2.ensureMemoryAvailable(8L * size, "IntArray.toDoubleArray");
-        double dar[] = new double[size];
+        final double dar[] = new double[size];
         for (int i = 0; i < size; i++) {
-            int j = array[i];
+            final int j = array[i];
             dar[i] = maxIsMV && j == Integer.MAX_VALUE? Double.NaN : j;
         }
         return dar;
@@ -701,7 +701,7 @@ public class IntArray extends PrimitiveArray {
      */
     public String[] toStringArray() {
         Math2.ensureMemoryAvailable(8L * size, "IntArray.toStringArray"); //8L is feeble minimal estimate
-        String sar[] = new String[size];
+        final String sar[] = new String[size];
         for (int i = 0; i < size; i++) {
             int j = array[i];
             sar[i] = maxIsMV && j == Integer.MAX_VALUE? "" : String.valueOf(j);
@@ -715,7 +715,7 @@ public class IntArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public int get(int index) {
+    public int get(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in IntArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -728,7 +728,7 @@ public class IntArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @param value the value for that element
      */
-    public void set(int index, int value) {
+    public void set(final int index, final int value) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in IntArray.set: index (" + 
                 index + ") >= size (" + size + ").");
@@ -742,7 +742,7 @@ public class IntArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as an int. 
      */
-    public int getInt(int index) {
+    public int getInt(final int index) {
         return get(index);
     }
 
@@ -754,7 +754,7 @@ public class IntArray extends PrimitiveArray {
      * @param index the index number 0 .. size-1
      * @param i the value.
      */
-    public void setInt(int index, int i) {
+    public void setInt(final int index, final int i) {
         set(index, i);
     }
 
@@ -765,8 +765,8 @@ public class IntArray extends PrimitiveArray {
      * @return the value as a long. 
      *   If maxIsMV, Integer.MAX_VALUE is returned as Long.MAX_VALUE.
      */
-    public long getLong(int index) {
-        int i = get(index);
+    public long getLong(final int index) {
+        final int i = get(index);
         return maxIsMV && i == Integer.MAX_VALUE? Long.MAX_VALUE : i;
     }
 
@@ -777,7 +777,7 @@ public class IntArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToInt(long).
      */
-    public void setLong(int index, long i) {
+    public void setLong(final int index, final long i) {
         if (i < Integer.MIN_VALUE || i > Integer.MAX_VALUE) {
             maxIsMV = true;
             set(index, Integer.MAX_VALUE);
@@ -794,8 +794,8 @@ public class IntArray extends PrimitiveArray {
      * @return the value as a ulong. 
      *   If maxIsMV, MAX_VALUE is returned as null.
      */
-    public BigInteger getULong(int index) {
-        int b = get(index);
+    public BigInteger getULong(final int index) {
+        final int b = get(index);
         return maxIsMV && b == Integer.MAX_VALUE? null : new BigInteger("" + b);
     }
 
@@ -806,7 +806,7 @@ public class IntArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToByte(long).
      */
-    public void setULong(int index, BigInteger i) {
+    public void setULong(final int index, final BigInteger i) {
         setDouble(index, i == null? Double.NaN : i.doubleValue()); //easier to work with. handles NaN. wide range
     }
 
@@ -819,8 +819,8 @@ public class IntArray extends PrimitiveArray {
      *   with String2.parseFloat and so may return Float.NaN.
      *   Int.MAX_VALUE is returned as Float.NaN.
      */
-    public float getFloat(int index) {
-        int i = get(index);
+    public float getFloat(final int index) {
+        final int i = get(index);
         return maxIsMV && i == Integer.MAX_VALUE? Float.NaN : i;
     }
 
@@ -831,7 +831,7 @@ public class IntArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToInt(d).
      */
-    public void setFloat(int index, float d) {
+    public void setFloat(final int index, final float d) {
         if (!maxIsMV && (!Float.isFinite(d) || d < Integer.MIN_VALUE || d > Integer.MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToInt(d));
@@ -846,8 +846,8 @@ public class IntArray extends PrimitiveArray {
      *   with String2.parseDouble and so may return Double.NaN.
      *   Int.MAX_VALUE is returned as Double.NaN.
      */
-    public double getDouble(int index) {
-        int i = get(index);
+    public double getDouble(final int index) {
+        final int i = get(index);
         return maxIsMV && i == Integer.MAX_VALUE? Double.NaN : i;
     }
 
@@ -861,7 +861,7 @@ public class IntArray extends PrimitiveArray {
      */
     public PrimitiveArray makeUnsignedPA() {
         Math2.ensureMemoryAvailable(4L * size, "IntArray");
-        int ar[] = new int[size];
+        final int ar[] = new int[size];
         System.arraycopy(array, 0, ar, 0, size);
         return new UIntArray(ar);
     }    
@@ -876,7 +876,7 @@ public class IntArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getUnsignedDouble(int index) {
+    public double getUnsignedDouble(final int index) {
         return Integer.toUnsignedLong(get(index));
     }
 
@@ -891,7 +891,7 @@ public class IntArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getRawDouble(int index) {
+    public double getRawDouble(final int index) {
         return get(index);
     }
 
@@ -902,7 +902,7 @@ public class IntArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToInt(d).
      */
-    public void setDouble(int index, double d) {
+    public void setDouble(final int index, final double d) {
         if (!maxIsMV && (!Double.isFinite(d) || d < Integer.MIN_VALUE || d > Integer.MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToInt(d));
@@ -916,8 +916,8 @@ public class IntArray extends PrimitiveArray {
      * @return For numeric types, this returns (String.valueOf(ar[index])), or "" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value.
      */
-    public String getString(int index) {
-        int i = get(index);
+    public String getString(final int index) {
+        final int i = get(index);
         return maxIsMV && i == Integer.MAX_VALUE? "" : String.valueOf(i);
     }
 
@@ -930,8 +930,8 @@ public class IntArray extends PrimitiveArray {
      * @return For numeric types, this returns ("" + ar[index]), or "null" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value (never "null").
      */
-    public String getJsonString(int index) {
-        int i = get(index);
+    public String getJsonString(final int index) {
+        final int i = get(index);
         return maxIsMV && i == Integer.MAX_VALUE? "null" : String.valueOf(i);
     }
 
@@ -946,7 +946,7 @@ public class IntArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as a String. 
      */
-    public String getRawString(int index) {
+    public String getRawString(final int index) {
         return String.valueOf(get(index));
     }
 
@@ -957,8 +957,8 @@ public class IntArray extends PrimitiveArray {
      * @param s the value. For numeric PrimitiveArray's, it is parsed
      *   with String2.parseInt.
      */
-    public void setString(int index, String s) {
-        Integer io = String2.parseIntObject(s); //handles NaN and mv
+    public void setString(final int index, final String s) {
+        final Integer io = String2.parseIntObject(s); //handles NaN and mv
         if (io == null) {
             maxIsMV = true;
             set(index, Integer.MAX_VALUE);
@@ -974,7 +974,7 @@ public class IntArray extends PrimitiveArray {
      * @param lookFor the value to be looked for
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(int lookFor) {
+    public int indexOf(final int lookFor) {
         return indexOf(lookFor, 0);
     }
 
@@ -985,7 +985,7 @@ public class IntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(int lookFor, int startIndex) {
+    public int indexOf(final int lookFor, final int startIndex) {
         for (int i = startIndex; i < size; i++) 
             if (array[i] == lookFor) 
                 return i;
@@ -999,7 +999,7 @@ public class IntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(String lookFor, int startIndex) {
+    public int indexOf(final String lookFor, final int startIndex) {
         if (startIndex >= size)
             return -1;
         return indexOf(String2.parseInt(lookFor), startIndex);
@@ -1012,7 +1012,7 @@ public class IntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(int lookFor, int startIndex) {
+    public int lastIndexOf(final int lookFor, final int startIndex) {
         if (startIndex >= size)
             throw new IllegalArgumentException(String2.ERROR + " in IntArray.get: startIndex (" + 
                 startIndex + ") >= size (" + size + ").");
@@ -1029,7 +1029,7 @@ public class IntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(String lookFor, int startIndex) {
+    public int lastIndexOf(final String lookFor, final int startIndex) {
         return lastIndexOf(String2.parseInt(lookFor), startIndex);
     }
 
@@ -1047,7 +1047,7 @@ public class IntArray extends PrimitiveArray {
      * @param o the object that will be compared to this IntArray
      * @return true if equal.  o=null returns false.
      */
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         return testEquals(o).length() == 0;
     }
 
@@ -1059,11 +1059,11 @@ public class IntArray extends PrimitiveArray {
      * @return a String describing the difference (or "" if equal).
      *   o=null doesn't throw an exception.
      */
-    public String testEquals(Object o) {
+    public String testEquals(final Object o) {
         if (!(o instanceof IntArray))
             return "The two objects aren't equal: this object is a IntArray; the other is a " + 
                 (o == null? "null" : o.getClass().getName()) + ".";
-        IntArray other = (IntArray)o;
+        final IntArray other = (IntArray)o;
         if (other.size() != size)
             return "The two IntArrays aren't equal: one has " + size + 
                " value(s); the other has " + other.size() + " value(s).";
@@ -1094,7 +1094,7 @@ public class IntArray extends PrimitiveArray {
      * @return an NCCSV attribute String
      */
     public String toNccsvAttString() {
-        StringBuilder sb = new StringBuilder(size * 10);
+        final StringBuilder sb = new StringBuilder(size * 10);
         for (int i = 0; i < size; i++) 
             sb.append((i == 0? "" : ",") + array[i] + "i");
         return sb.toString();
@@ -1130,7 +1130,7 @@ public class IntArray extends PrimitiveArray {
      *   the value at index2.  
      *   Think "array[index1] - array[index2]".
      */
-    public int compare(int index1, PrimitiveArray otherPA, int index2) {
+    public int compare(final int index1, final PrimitiveArray otherPA, final int index2) {
         return Long.compare(getLong(index1), otherPA.getLong(index2));  //long handles mv
     }
 
@@ -1143,7 +1143,7 @@ public class IntArray extends PrimitiveArray {
      * @param from an index number 0 ... size-1
      * @param to an index number 0 ... size-1
      */
-    public void copy(int from, int to) {
+    public void copy(final int from, final int to) {
         array[to] = array[from];
     }
 
@@ -1156,10 +1156,10 @@ public class IntArray extends PrimitiveArray {
      * in the sorted list, rank[1] is the row number of the
      * second item in the sorted list, ...).
      */
-    public void reorder(int rank[]) {
-        int n = rank.length;
+    public void reorder(final int rank[]) {
+        final int n = rank.length;
         //new length could be n, but I'll keep it the same array.length as before
-        int newArray[] = new int[array.length]; 
+        final int newArray[] = new int[array.length]; 
         for (int i = 0; i < n; i++)
             newArray[i] = array[rank[i]];
         array = newArray;
@@ -1184,7 +1184,7 @@ public class IntArray extends PrimitiveArray {
      *    But if size=0, this returns 0.
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos) throws Exception {
+    public int writeDos(final DataOutputStream dos) throws Exception {
         for (int i = 0; i < size; i++)
             dos.writeInt(array[i]);
         return size == 0? 0 : 4;
@@ -1199,7 +1199,7 @@ public class IntArray extends PrimitiveArray {
      *    (for Strings, this varies; for others it is consistent)
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos, int i) throws Exception {
+    public int writeDos(final DataOutputStream dos, final int i) throws Exception {
         dos.writeInt(array[i]);
         return 4;
     }
@@ -1211,7 +1211,7 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void readDis(DataInputStream dis, int n) throws Exception {
+    public void readDis(final DataInputStream dis, final int n) throws Exception {
         ensureCapacity(size + (long)n);
         for (int i = 0; i < n; i++)
             array[size++] = dis.readInt();
@@ -1224,9 +1224,9 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void read24BitDis(DataInputStream dis, int n, boolean bigEndian) throws Exception {
+    public void read24BitDis(final DataInputStream dis, final int n, final boolean bigEndian) throws Exception {
         ensureCapacity(size + (long)n);
-        byte bar[] = new byte[3];
+        final byte bar[] = new byte[3];
         for (int i = 0; i < n; i++) {
             dis.readFully(bar);
             array[size++] = bigEndian?
@@ -1242,9 +1242,9 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void read24BitDisAudio(DataInputStream dis, int n, boolean bigEndian) throws Exception {
+    public void read24BitDisAudio(final DataInputStream dis, final int n, final boolean bigEndian) throws Exception {
         ensureCapacity(size + (long)n);
-        byte bar[] = new byte[3];
+        final byte bar[] = new byte[3];
         for (int i = 0; i < n; i++) {
             dis.readFully(bar);
             array[size++] = bigEndian?
@@ -1260,8 +1260,8 @@ public class IntArray extends PrimitiveArray {
      * @param dis
      * @throws IOException if trouble
      */
-    public void internalizeFromDODS(DataInputStream dis) throws java.io.IOException {
-        int nValues = dis.readInt();
+    public void internalizeFromDODS(final DataInputStream dis) throws java.io.IOException {
+        final int nValues = dis.readInt();
         dis.readInt(); //skip duplicate of nValues
         ensureCapacity(size + (long)nValues);
         for (int i = 0; i < nValues; i++) 
@@ -1275,7 +1275,7 @@ public class IntArray extends PrimitiveArray {
      * @param index
      * @throws Exception if trouble
      */
-    public void writeToRAF(RandomAccessFile raf, int index) throws Exception {
+    public void writeToRAF(final RandomAccessFile raf, final int index) throws Exception {
         raf.writeInt(get(index));
     }
 
@@ -1286,7 +1286,7 @@ public class IntArray extends PrimitiveArray {
      * @param raf the RandomAccessFile
      * @throws Exception if trouble
      */
-    public void readFromRAF(RandomAccessFile raf) throws Exception {
+    public void readFromRAF(final RandomAccessFile raf) throws Exception {
         add(raf.readInt());
     }
 
@@ -1297,7 +1297,7 @@ public class IntArray extends PrimitiveArray {
      * @param n the number of elements to skip
      * @throws Exception if trouble
      */
-    public static void disSkip(DataInputStream dis, int n) throws Exception {
+    public static void disSkip(final DataInputStream dis, final int n) throws Exception {
         int nBytes = 4 * n;
         while (nBytes > 0) nBytes -= dis.skipBytes(nBytes);
     }
@@ -1309,8 +1309,8 @@ public class IntArray extends PrimitiveArray {
      * @return param n the number of elements to skip
      * @throws Exception if trouble
      */
-    public static double readDisAsDouble(DataInputStream dis) throws Exception {
-        int i = dis.readInt();
+    public static double readDisAsDouble(final DataInputStream dis) throws Exception {
+        final int i = dis.readInt();
         return i == Integer.MAX_VALUE? Double.NaN : i;
     }
     
@@ -1322,13 +1322,13 @@ public class IntArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with pa.getInt.
      */
-    public void append(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void append(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof IntArray) {
+        if (pa instanceof IntArray ia) {
             if (pa.getMaxIsMV())
                 setMaxIsMV(true);
-            System.arraycopy(((IntArray)pa).array, 0, array, size, otherSize);
+            System.arraycopy(ia.array, 0, array, size, otherSize);
             size += otherSize;
         } else {
             for (int i = 0; i < otherSize; i++)
@@ -1346,11 +1346,11 @@ public class IntArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with pa.getInt.
      */
-    public void rawAppend(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void rawAppend(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof IntArray) {
-            System.arraycopy(((IntArray)pa).array, 0, array, size, otherSize);
+        if (pa instanceof IntArray ia) {
+            System.arraycopy(ia.array, 0, array, size, otherSize);
         } else {
             for (int i = 0; i < otherSize; i++)
                 array[size + i] = pa.getRawInt(i);  //this DOESN'T convert mv's
@@ -1367,17 +1367,17 @@ public class IntArray extends PrimitiveArray {
      * @return a PrimitveArray (the same type as this class) with the unique values, sorted.
      *     If all the values are unique and already sorted, this returns 'this'.
      */
-    public PrimitiveArray makeIndices(IntArray indices) {
+    public PrimitiveArray makeIndices(final IntArray indices) {
         indices.clear();
         if (size == 0) {
             return new IntArray();
         }
 
         //make a hashMap with all the unique values (associated values are initially all dummy)
-        Integer dummy = new Integer(-1);
-        HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
+        final Integer dummy = Integer.valueOf(-1);
+        final HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
         int lastValue = array[0]; //since lastValue often equals currentValue, cache it
-        hashMap.put(new Integer(lastValue), dummy);
+        hashMap.put(Integer.valueOf(lastValue), dummy);
         boolean alreadySorted = true;
         for (int i = 1; i < size; i++) {
             int currentValue = array[i];
@@ -1385,12 +1385,12 @@ public class IntArray extends PrimitiveArray {
                 if (currentValue < lastValue) 
                     alreadySorted = false;
                 lastValue = currentValue;
-                hashMap.put(new Integer(lastValue), dummy);
+                hashMap.put(Integer.valueOf(lastValue), dummy);
             }
         }
 
         //quickly deal with: all unique and already sorted
-        Set keySet = hashMap.keySet();
+        final Set keySet = hashMap.keySet();
         int nUnique = keySet.size();
         if (nUnique == size && alreadySorted) {
             indices.ensureCapacity(size);
@@ -1400,8 +1400,8 @@ public class IntArray extends PrimitiveArray {
         }
 
         //store all the elements in an array
-        Object unique[] = new Object[nUnique];
-        Iterator iterator = keySet.iterator();
+        final Object unique[] = new Object[nUnique];
+        final Iterator iterator = keySet.iterator();
         int count = 0;
         while (iterator.hasNext())
             unique[count++] = iterator.next();
@@ -1414,23 +1414,23 @@ public class IntArray extends PrimitiveArray {
 
         //put the unique values back in the hashMap with the ranks as the associated values
         //and make tUnique 
-        int tUnique[] = new int[nUnique];
+        final int tUnique[] = new int[nUnique];
         for (int i = 0; i < count; i++) {
-            hashMap.put(unique[i], new Integer(i));
+            hashMap.put(unique[i], Integer.valueOf(i));
             tUnique[i] = ((Integer)unique[i]).intValue();
         }
 
         //convert original values to ranks
-        int ranks[] = new int[size];
+        final int ranks[] = new int[size];
         lastValue = array[0];
-        ranks[0] = ((Integer)hashMap.get(new Integer(lastValue))).intValue();
+        ranks[0] = ((Integer)hashMap.get(Integer.valueOf(lastValue))).intValue();
         int lastRank = ranks[0];
         for (int i = 1; i < size; i++) {
             if (array[i] == lastValue) {
                 ranks[i] = lastRank;
             } else {
                 lastValue = array[i];
-                ranks[i] = ((Integer)hashMap.get(new Integer(lastValue))).intValue();
+                ranks[i] = ((Integer)hashMap.get(Integer.valueOf(lastValue))).intValue();
                 lastRank = ranks[i];
             }
         }
@@ -1449,10 +1449,10 @@ public class IntArray extends PrimitiveArray {
      * @param tTo   the new value (use "" or "NaN"  for standard missingValue)
      * @return the number of values switched
      */
-    public int switchFromTo(String tFrom, String tTo) {
-        int from = Math2.roundToInt(String2.parseDouble(tFrom));
-        double d = String2.parseDouble(tTo);
-        int to   = Math2.roundToInt(d);
+    public int switchFromTo(final String tFrom, final String tTo) {
+        final int from = Math2.roundToInt(String2.parseDouble(tFrom));
+        final double d = String2.parseDouble(tTo);
+        final int to   = Math2.roundToInt(d);
         if (from == to)
             return 0;
         int count = 0;
@@ -1461,7 +1461,7 @@ public class IntArray extends PrimitiveArray {
                 array[i] = to;
                 count++;
             }
-        }
+        } 
         if (count > 0 && Double.isNaN(d))
             maxIsMV = true;
         return count;
@@ -1517,7 +1517,7 @@ public class IntArray extends PrimitiveArray {
      */
     public void changeSignedToFromUnsigned() {
         for (int i = 0; i < size; i++) {
-            int i2 = array[i];
+            final int i2 = array[i];
             array[i] = i2 < 0? i2 + Integer.MAX_VALUE + 1 : 
                                i2 - Integer.MAX_VALUE - 1; //order of ops is important
         }
@@ -1963,6 +1963,19 @@ public class IntArray extends PrimitiveArray {
         String2.log("n=" + n + " time/test=" + (((System.currentTimeMillis() - time) * 1000000) / n) + " nanoseconds  (~31) currentTime=" + tTime);
     }
 
+    public static void speedTest() {
+        String2.log("\n*** IntArray.speedTest");
+        int n = 20000;
+        long time = System.currentTimeMillis();
+        IntArray ia = new IntArray(0, 1000000);
+        for (int i = 0; i < n; i++) {
+            ia.switchFromTo("" + i, "" + (i+1000));  //so compiler can't skip doing work
+        }
+        String2.log("n=" + n + " time=" + (System.currentTimeMillis() - time) + "ms (orig ~8000)");
+        Test.ensureEqual(ia.hashCode(), -1977844448, "hashCode");  //to ensure results unchanged
+    }
+
+
     /**
      * This runs all of the interactive or not interactive tests for this class.
      *
@@ -1990,6 +2003,7 @@ public class IntArray extends PrimitiveArray {
 
                 } else {
                     if (test ==  0) basicTest();
+                    //if (test ==  1) speedTest();
                 }
 
                 String2.log(msg + test + " finished successfully in " + (System.currentTimeMillis() - time) + " ms.");
