@@ -644,7 +644,7 @@ public class GeoDateDialog extends JDialog
     cal.setTime( newDate );
     computeFields( cal );
     int m = cal.get( MONTH );
-    Integer yr = new Integer( cal.get( YEAR));
+    Integer yr = Integer.valueOf( cal.get( YEAR));
 
     monthList.setVisible(false );
     monthList.setSelectedIndex( m);
@@ -798,13 +798,13 @@ public class GeoDateDialog extends JDialog
       int prevHr = cal.get(HOUR_OF_DAY);   // hang on to old value
       int hr = Integer.parseInt( hourText.getText().trim());
       hr = validateHours( hr );
-      hourText.setText( (new Integer(hr)).toString() );
+      hourText.setText( (Integer.valueOf(hr)).toString() );
       cal.set( HOUR_OF_DAY, hr );
       liquidDate = new GeoDate(cal.getTime());
       if (!liquidDateWithinBounds()) {  // restore old value
         cal.set( HOUR_OF_DAY, prevHr );
         liquidDate = new GeoDate(cal.getTime());
-        hourText.setText( (new Integer(prevHr)).toString() );
+        hourText.setText( (Integer.valueOf(prevHr)).toString() );
       }
       updateDateLabel();
     } catch (NumberFormatException e) {
@@ -820,14 +820,14 @@ public class GeoDateDialog extends JDialog
       int prevYr = cal.get(YEAR);   // hang on to old value
       int yr = Integer.parseInt( yearText.getText().trim());
       //yr = validateYear( yr );
-      yearText.setText( (new Integer(yr)).toString() );
+      yearText.setText( (Integer.valueOf(yr)).toString() );
       cal.set( YEAR, yr );
       liquidDate = new GeoDate(cal.getTime());
       if (!liquidDateWithinBounds()) {  // restore old value
         //boundsMsg();
         cal.set( YEAR, prevYr );
         liquidDate = new GeoDate(cal.getTime());
-        yearText.setText( (new Integer(prevYr)).toString() );
+        yearText.setText( (Integer.valueOf(prevYr)).toString() );
       }
       else {
         updateGUIAfterLiquidDateChange();
@@ -1081,7 +1081,7 @@ public class GeoDateDialog extends JDialog
         if (hr == -1) {
           hr = 23;
         }
-        hourText.setText( (new Integer(hr)).toString() );
+        hourText.setText( (Integer.valueOf(hr)).toString() );
         handleHourChange();
       } catch (NumberFormatException e) {
       }
@@ -1097,7 +1097,7 @@ public class GeoDateDialog extends JDialog
         if (hr == 24) {
           hr = 0;
         }
-        hourText.setText( (new Integer(hr)).toString() );
+        hourText.setText( (Integer.valueOf(hr)).toString() );
         handleHourChange();
       } catch (NumberFormatException e) {
       }
