@@ -108,9 +108,9 @@ public class JSlider2 extends JComponent
   public void setMinValue(double min) {
     minValue_ = Math.max(min, 0.0);
     if(minOld_ != minValue_) {
-      Double tempOld = new Double(minOld_);
+      Double tempOld = Double.valueOf(minOld_);
       minOld_ = minValue_;
-      changes.firePropertyChange("minValue", tempOld, new Double(minValue_));  
+      changes.firePropertyChange("minValue", tempOld, Double.valueOf(minValue_));  
     }
     repaint();
   }
@@ -130,9 +130,9 @@ public class JSlider2 extends JComponent
   public void setMaxValue(double max) {
     maxValue_ = Math.min(max, 1.0);
     if(maxOld_ != maxValue_) {
-      Double tempOld = new Double(maxOld_);
+      Double tempOld = Double.valueOf(maxOld_);
       maxOld_ = maxValue_;
-      changes.firePropertyChange("maxValue", tempOld, new Double(maxValue_));  
+      changes.firePropertyChange("maxValue", tempOld, Double.valueOf(maxValue_));  
     }
     repaint();
   }
@@ -473,14 +473,14 @@ public class JSlider2 extends JComponent
       
     if(forcePost || alwaysPost_) {
       if(minOld_ != minValue_) {
-        Double tempOld = new Double(minOld_);
+        Double tempOld = Double.valueOf(minOld_);
         minOld_ = minValue_;
-        changes.firePropertyChange("minValue", tempOld, new Double(minValue_));
+        changes.firePropertyChange("minValue", tempOld, Double.valueOf(minValue_));
       }
       if(maxOld_ != maxValue_) {
-        Double tempOld = new Double(maxOld_);
+        Double tempOld = Double.valueOf(maxOld_);
         maxOld_ = maxValue_;
-        changes.firePropertyChange("maxValue", tempOld, new Double(maxValue_));
+        changes.firePropertyChange("maxValue", tempOld, Double.valueOf(maxValue_));
       }
     }
     paint(getGraphics());
